fixed z-index for mobile and dropdown menu

--- a/styles/sass/components/_media-queries.scss
+++ b/styles/sass/components/_media-queries.scss
@@ -14,7 +14,7 @@
 
     .primary-navigation {
         display: none;
-        z-index: 1;
+        z-index: 999;
         position: absolute;
         inset: calc(100% + var(--size-200)) 0 auto 0;
         background-color: var(--clr-neutral-200);
